RESOLVED FIXED51074
Cannot type into plugin edit field
https://bugs.webkit.org/show_bug.cgi?id=51074
Summary Cannot type into plugin edit field
Anders Carlsson
Reported 2010-12-14 16:54:39 PST
Cannot type into plugin edit field
Attachments
Patch (13.11 KB, patch)
2010-12-14 16:59 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-14 16:55:04 PST
Anders Carlsson
Comment 2 2010-12-14 16:59:23 PST
Sam Weinig
Comment 3 2010-12-14 17:02:37 PST
Comment on attachment 76596 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=76596&action=review > WebKit2/ChangeLog:56 > +2010-12-14 Anders Carlsson <andersca@apple.com> > + > + Reviewed by NOBODY (OOPS!). > + > + > + * PluginProcess/PluginProcess.cpp: > + (WebKit::PluginProcess::netscapePluginModule): > + > + * Shared/Plugins/Netscape/NetscapePluginModule.cpp: > + (WebKit::NetscapePluginModule::load): > + > + * Shared/Plugins/Netscape/NetscapePluginModule.h: > + (WebKit::NetscapePluginModule::pluginQuirks): > + * Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm: > + (WebKit::NetscapePluginModule::determineQuirks): > + * Shared/Plugins/PluginQuirks.h: Copied from WebKit2/Shared/Plugins/Netscape/NetscapePluginModule.h. > + (WebKit::PluginQuirks::PluginQuirks): > + (WebKit::PluginQuirks::add): > + (WebKit::PluginQuirks::contains): > + * WebKit2.xcodeproj/project.pbxproj: > + Double changelog.
Anders Carlsson
Comment 4 2010-12-14 17:06:41 PST
WebKit Review Bot
Comment 5 2010-12-14 17:23:14 PST
http://trac.webkit.org/changeset/74077 might have broken Qt Linux Release
Note You need to log in before you can comment on or make changes to this bug.