WebKit2/Shared/Plugins/Netscape/win/NetscapePluginModuleWin.cpp
@@ -113,5 +113,9 @@ bool NetscapePluginModule::getPluginInfo(const String& pluginPath, PluginInfoSto
     return true;
 }
 
+void NetscapePluginModule::determineQuirks()
+{
+}
+
 } // namespace WebKit
 
